# eagle-api

./: Cargo.toml  README.md
src/: api.rs  data.rs  error.rs  lib.rs  utils.rs
src/api/: folder.rs  item.rs  library.rs
src/api/application/: info.rs
src/api/folder/: create.rs  list.rs  list_recent.rs  rename.rs  update.rs
src/api/item/: add_bookmark.rs  add_from_path.rs  add_from_paths.rs  add_from_url.rs  add_from_urls.rs  info.rs  list.rs  move_to_trash.rs  refresh_palette.rs  refresh_thumbnail.rs  thumbnail.rs  update.rs
