[package]
name = "eagle-api"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
typed-builder = "0.20.0"
serde_json = "1.0.128"
bytes = "1.7.2"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
